src/objects/netsuite_conn__NetSuite_Financial__c.object
<CustomObject>
    <description>Posting transactions from NetSuite including Cash Sales, Invoices, Customer Payments, Credit Memos, Cash Refunds, Journal Entries, etc.</description>
    <fields>
        <fullName>netsuite_conn__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Applied__c</fullName>
        <label>Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Currency__c</fullName>
        <label>Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Days_Overdue__c</fullName>
        <formula>TODAY() - DATEVALUE(TEXT(netsuite_conn__Due_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Discount_Total__c</fullName>
        <description>Transaction header level discounts.</description>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Memo__c</fullName>
        <label>Memo</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financials</relationshipLabel>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__PDF_File__c</fullName>
        <formula>IF( netsuite_conn__Document_Id__c == null , &apos;&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + netsuite_conn__Document_Id__c , Name + &apos;.pdf&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Shipping_Total__c</fullName>
        <description>Shipping subtotal.</description>
        <label>Shipping Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Status__c</fullName>
        <description>Status of transaction in NetSuite.</description>
        <label>Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Subtotal__c</fullName>
        <description>Transaction subtotal before any discounts, shipping cost, handling cost or tax.</description>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Tax_Total__c</fullName>
        <description>Tax subtotal.</description>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Terms__c</fullName>
        <label>Terms</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Total__c</fullName>
        <description>Transaction total.</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Transaction_Date__c</fullName>
        <description>Date of transaction in NetSuite.</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Cash Refund</fullName>
                </value>
                <value>
                    <fullName>Customer Refund</fullName>
                </value>
                <value>
                    <fullName>Customer Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Unapplied__c</fullName>
        <label>Unapplied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Financial</label>
    <listViews>
        <fullName>netsuite_conn__All</fullName>
        <columns>netsuite_conn__Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>